--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,6 +79,9 @@ input, select, textarea{
 	background-color: #f5f5f5;
 	font-size: 1rem;
 }
+.body-wrapper{
+	width: 100%;
+}
 
 .clearfix::after{
   content: '';
@@ -90,6 +93,64 @@ input, select, textarea{
 #error_explanation {
 	color: #d70035;
 }
+
+
+.ball__shadow{
+	/*display: none;*/
+	position: fixed;
+    width: 90px;
+    height: 90px;
+    bottom: 50px;
+    right: 30px;
+    background-color: orangered;
+    border-radius: 50%;
+    filter: drop-shadow(-8px 8px 3px rgba(0, 0, 0, 0.4));
+}
+.scrollTop__ball a{
+	/*display: none;*/
+	position: fixed;
+	text-align: center;
+	text-decoration: none;
+	line-height: 90px;
+	bottom: 50px;
+	right: 30px;
+	width: 90px;
+	height: 90px;
+	border-radius: 50%;
+	background-color: #000;
+	color: #fff;
+	letter-spacing: 1.5px;
+	/*filter: drop-shadow(-5px 5px 2px rgba(0, 0, 0, 0.5));*/
+	z-index: 1;
+	transition: ease 300ms;
+}
+.scrollTop__ball a:hover{
+	transform: rotateZ(360deg);
+	background-color: #fff;
+	color: #000;
+}
+/*.scrollTop__ball a:active{
+	transform: translateY(5px);
+}*/
+.scrollTop__ball i{
+	position: fixed;
+    bottom: 160px;
+    right: 25px;
+    width: 90px;
+    height: 90px;
+    font-size: 5rem;
+    color: #aad7ff;
+    filter: drop-shadow(-7px 7px 4px rgba(0, 0, 0, 0.4));
+}
+.scrollTop__ball p{
+	position: fixed;
+    bottom: 250px;
+    right: 60px;
+    font-size: 1.5rem;
+    filter: drop-shadow(-7px 7px 4px rgba(0, 0, 0, 0.4));
+	transform: rotate(-30deg);
+}
+
 
 /*共通-----------------------------*/
 .label p{
@@ -147,11 +208,11 @@ input, select, textarea{
 
 /*box,button要素shadow*/
 .box-shadow{
-	box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.2);
+	box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
 	transition: 200ms;
 }
 .box-shadow:hover{
-	box-shadow: 1px 2.5px 5px rgba(0, 0, 0, 0.3);
+	box-shadow: 1px 2.5px 5px rgba(0, 0, 0, 0.4);
 }
 
 /*button-style関係*/
@@ -251,26 +312,42 @@ input, select, textarea{
 	background-color: #1e90ff;
 }
 
+.no_contents{
+	position: absolute;
+	top: 50%;
+	left: 35%;
+	transform: translate(-50%, -50%);
+	font-size: 30px;
+	color: gray;
+}
+
 /*共通end--------------------------*/
 .about{
 	text-align: center;
 }
 .about-box, .app-introduction{
 	margin: 60px auto;
-	width: 60%;
+	/*width: 60%;*/
 }
 .app-intro{
 	display: flex;
 	flex-direction: row;
-	margin-bottom: 20px;
+	/*justify-content: center;*/
+	font-size: 1rem;
+	/*margin-bottom: 20px;*/
+	background-color: #efefef;
+	padding: 10px 300px;
 }
 .app-intro:nth-child(even){
 	flex-direction: row-reverse;
+	background-color: #dedede;
+	padding: 10px 300px;
 }
 .app-intro-img1{
 	min-width: 300px;
 	height: 250px;
-	background-color: lime;
+	object-fit: contain;
+	/*background-color: silver;*/
 }
 .app-intro-text{
 	margin: auto;
@@ -411,7 +488,7 @@ input:focus + .underline{
 .form-box{
 	/*上下左右中央寄せ*/
 	position: absolute;
-	top: 60%;
+	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	/*ここまで*/
@@ -454,6 +531,196 @@ input:focus + .underline{
 	font-family: 'Chakra Petch', sans-serif;
 	letter-spacing: 1px;
 }
+
+
+
+
+/*レスポンシブ対応*/
+
+
+/*タブレット対応*/
+@media screen and (max-width: 768px){
+	.body-wrapper{
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	.form-box{
+		position: absolute;
+		top: 40%;
+		left: 50%;
+	    width: 80%;
+	    color: #efefef;
+	    letter-spacing: 2px;
+	    text-align: center;
+	}
+
+	.sign-in-title, .sign-up-title{
+	    text-align: center;
+	    margin-bottom: 100px;
+	    color: #efefef;
+	    font-size: 3.5rem;
+	    letter-spacing: 5px;
+	    line-height: 3.5rem;
+	    filter: drop-shadow(4px 4px 0px rgba(0, 0, 0, 0.5));
+	}
+
+	.sign-in-background{
+		width: 100%;
+		max-height: 100vh;
+		padding: 0;
+		background-color: black;
+		object-fit: cover;
+	}
+
+	.sns-button{
+		width: 80%;
+		display: block;
+		text-align: center;
+		margin: 20px auto;
+		padding: 10px 0;
+		font-size: 15px;
+	}
+
+	.about-box{
+		margin: 100px auto 0;
+		/*width: 60%;*/
+	}
+
+	.about-text{
+		width: 90%;
+		margin: 0 auto;
+	}
+	
+	.app-introduction{
+		width: 100%;
+		margin: 60px auto 0;
+	}
+
+	.app-intro{
+		display: flex;
+		flex-direction: row;
+		/*justify-content: center;*/
+		font-size: 1rem;
+		/*margin-bottom: 20px;*/
+		background-color: #efefef;
+		padding: 10px;
+	}
+	.app-intro:nth-child(even){
+		flex-direction: row-reverse;
+		background-color: #dedede;
+		padding: 10px;
+	}
+}
+/*スマホ対応*/
+@media screen and (max-width: 425px){
+	.body-wrapper{
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	.image-wrapper{
+		position: relative;
+		width: 100%;
+	}
+
+	.form-box{
+		position: absolute;
+		top: 40%;
+		left: 50%;
+	    width: 80%;
+	    color: #efefef;
+	    letter-spacing: 2px;
+	    text-align: center;
+	}
+
+	.sign-in-title, .sign-up-title{
+	    text-align: center;
+	    margin-bottom: 100px;
+	    color: #efefef;
+	    font-size: 3.5rem;
+	    letter-spacing: 5px;
+	    line-height: 3.5rem;
+	    filter: drop-shadow(4px 4px 0px rgba(0, 0, 0, 0.5));
+	}
+
+	.sign-in-background{
+		width: 100%;
+		max-height: 100vh;
+		padding: 0;
+		background-color: black;
+		object-fit: cover;
+	}
+
+	.sns-button{
+		width: 100%;
+		display: block;
+		text-align: center;
+		margin: 20px auto;
+		padding: 10px 0;
+		font-size: 15px;
+	}
+
+	.bottom-area {
+	    height: 110px;
+	    background-color: black;
+	    position: absolute;
+	    width: 100%;
+	    bottom: 0px;
+	    text-align: center;
+	}
+
+	.about-box{
+		margin: 100px auto 20px;
+		/*width: 60%;*/
+	}
+
+	.about-box i {
+	    padding-top: 50px;
+	    font-size: 8rem;
+	    display: block;
+	    text-align: center;
+	}
+
+	.about-text{
+		width: 90%;
+		margin: 0 auto;
+		font-size: 0.8rem;
+	}
+
+	.app-introduction{
+		width: 100%;
+		margin: 60px auto 0;
+	}
+
+	.app-intro {
+	    display: block;
+	    font-size: 1rem;
+	    background-color: #efefef;
+	    padding: 0;
+	}
+	.app-intro:nth-child(even){
+		flex-direction: row-reverse;
+		background-color: #dedede;
+		padding: 0;
+	}
+
+	.app-intro-img1{
+		width: 100%;
+		height: 250px;
+		padding: 5px;
+		object-fit: fill;
+		/*background-color: silver;*/
+	}
+
+	.app-intro-text p{
+		padding:20px;
+		font-size: 0.8rem;
+	}
+}
+
+
+
 
 
 
