--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,33 +1,20 @@
-
-.notice{
+.flash__message{
 	position: fixed;
-	top: 60px;
+	top: 80px;
 	width: 100%;
-	padding: 5px 0;
-	background-color: #16b164;
+	padding: 10px 0;
 	color: #efefef;
 	z-index: 3000;
 	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
+}
+.notice{
+	background-color: #16b164;
 }
 .error{
-	position: fixed;
-	top: 60px;
-	width: 100%;
-	padding: 5px 0;
 	background-color: red;
-	color: #efefef;
-	z-index: 3000;
-	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 .first-welcome, .welcome{
-	position: fixed;
-	top: 60px;
-	width: 100%;
-	padding: 5px 0;
 	background-color: orangered;
-	color: #efefef;
-	z-index: 3000;
-	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 header{
 	position: fixed;
@@ -44,18 +31,29 @@ footer{
 	position: relative;
 	width: 100%;
 	height: 200px;
-	color: #f7f6f5;
-	background-color:  #efefef;
-	background-image: url("images/footer-image2.jpg");
-	background-position: bottom center;
-	background-size: cover;
+	color: #242425;
+	background-color:  #dedede;
 	box-shadow: inset 0px 2px 2px #dedede;
+	border-top: solid 1px rgba(0, 0, 0, 0.2);
+	filter: drop-shadow();
 	z-index: 9999;
+}
+footer p,
+footer li{
+	text-align: center;
+	font-size: 0.7rem;
+	padding: 20px;
+	margin-top: 10px;
+}
+.footer-nav-box{
+	display: flex;
+	justify-content: center;
+	list-style: none;
 }
 main{
 	position: relative;
 	background-color: #ffff;
-	padding-top: 60px;
+	padding-top: 80px;
 	min-height: 100vh;
 }
 main::after{
@@ -88,12 +86,18 @@ nav li{
 	position: relative;
 	z-index: 1;
 }
-
+.app-logo{
+    position: absolute;
+    top: 2px;
+    left: 20px;
+    width: 150px;
+    height: 75px;
+}
 .global-nav{
 	width: 95%;
 	text-align: right;
 	margin: 0 auto;
-	padding: 4px 0;
+	/*padding: 4px 0;*/
 }
 .global-nav a{
 	display: flex;
@@ -110,20 +114,20 @@ nav li{
 	background-color: orangered;
 }
 
-.global-nav img{
+.loginuser img{
 	border-radius: 50%;
 }
 
 .nav-box{
 	display: inline-block;
-	margin-right: 50px;
+	margin: 10px 50px;
 }
 .nav-list{
-	margin: 0 5px;
+	/*margin: 0 5px;*/
 }
 .nav-list a{
 	display: inline-block;
-	padding: 13px 10px;
+	padding: 19px 10px;
 	color: #dedede;
 	font-size: 0.8rem;
 	transition: 100ms;
@@ -154,10 +158,10 @@ nav li{
 
 .notifications-wrapper {
     position: fixed;
-    top: 100px;
+    top: 85px;
     right: 0;
     width: 100%;
-    height: 50px;
+    height: 40px;
     max-width: 150px;
     margin: 0 auto;
     list-style: none;
@@ -171,8 +175,8 @@ nav li{
 .notifications-wrapper > li {
     float: left;
     width: 100%; /* グローバルナビ4つの場合 */
-    height: 50px;
-    line-height: 50px;
+    /*height: 50px;*/
+    line-height: 40px;
     background-color: lightgray;
 }
 
@@ -217,17 +221,24 @@ ul.notifications-list {
 }
 
 /* 下矢印 */
-.init-bottom:after {
-    content: '';
+.init-bottom:before {
+    content: '◀︎';
+    position: absolute;
+    top: 0;
+    left: 0;
     display: inline-block;
-    width: 6px;
-    height: 6px;
-    margin: 0 0 0 15px;
+    transition: all 500ms;
+    /*width: 6px;
+    height: 6px;*/
+    /*margin: 0 0 0 15px;
     border-right: 1px solid gray;
     border-bottom: 1px solid gray;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+    transform: rotate(45deg);*/
+}
+.init-bottom:hover:before{
+	transform: rotate(180deg);
 }
 
 /* floatクリア */
@@ -242,7 +253,7 @@ ul.notifications-list {
 }
 
 .notifications-wrapper {
-    /**zoom: 1;*/
+    *zoom: 1;
 }
 
 
@@ -253,7 +264,7 @@ ul.notifications-list {
 
 li.notifications-box ul.notifications-list {
     position: absolute;
-    top: 50px;
+    top: 40px;
     width: 100%;
     background-color: white;
     -webkit-transition: all .2s ease;
@@ -261,7 +272,7 @@ li.notifications-box ul.notifications-list {
 }
 
 li.notifications-box:hover ul.notifications-list {
-    top: 50px;
+    top: 40px;
     visibility: visible;
     opacity: 1;
 }
