--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -4,7 +4,7 @@
 		<title>main</title>
 		<%= csrf_meta_tags %>
 		<%= csp_meta_tag %>
-
+		<%= favicon_link_tag '/images/snowfans_logo.png'%>
 		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 		<!-- <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet"> -->
@@ -32,10 +32,13 @@
 			<% if user_signed_in? %>
 				<nav class="global-nav">
 					<ul>
+						<%= link_to root_path do %>
+							<img class="app-logo" src="/images/snowfans-logo.png">
+						<% end %>
 						<div class="nav-box">
 							<li class="nav-list button"></i><%= link_to  "全国のゲレンデ情報をCheck!", "https://snow.gnavi.co.jp/", target: "_blank" %></li>
 							<li class="nav-list button"><%= link_to "みんなの予定", root_path %></li>
-							<li class="nav-list button"><%= link_to "予定を投稿", new_event_path %></li>
+							<li class="nav-list button"><%= link_to "予定を作成", new_event_path %></li>
 						</div>
 						<li class="provider-link">
 							<%= link_to user_path(current_user.id) do %>
@@ -60,33 +63,35 @@
 				</nav>
 			<% end %>
 		</header><!-- /header -->
-
-		<ul class="notifications-wrapper box-shadow">
-  		<li class="notifications-box">
-        <p class="init-bottom">新着お知らせ<%= current_user.notifications.where(check: false).count %>件</p>
-        <ul class="notifications-list">
-        	<% current_user.notifications.where(check: false).first(5).each do |n| %>
-            <li>
-            	<%= link_to link_through_path(n.id) do %>
-	            	<% if n.notification_type == "コメント" %>
-	            		<p><%= n.notified_by.nickname %>さんがコメントしました</p>
-	            	<% elsif n.notification_type == "参加" %>
-	            		<p><%= n.notified_by.nickname %>さんがイベント参加予定です！</p>
-	            	<% end %>
-	            <% end %>
-	            <% if n.notification_type == "#{n.user.area.name}" %>
-		            <%= link_to link_through_path(n.id) do%>
-		            	<p>ホームエリア(<%= n.notification_type %>)で新しくイベントが投稿されました！</p>
-		            <% end %>
-	            <% end %>
-            </li>
-          <% end %>
-          <% if current_user.notifications.where(check: false).count > 5 %>
-          	<p><%= link_to "全て見る", events_path %></p>
-          <% end %>
-        </ul>
-	    </li>
-		</ul>
+		<% unless current_user.notifications.blank? %>
+			<ul class="notifications-wrapper box-shadow">
+		  		<li class="notifications-box">
+			        <p class="init-bottom">新着お知らせ<%= current_user.notifications.where(check: false).count %>件</p>
+			        <ul class="notifications-list">
+			        	<% current_user.notifications.where(check: false).first(5).each do |n| %>
+			            <li>
+			            	<%= link_to link_through_path(n.id) do %>
+				            	<% if n.notification_type == "コメント" %>
+				            		<p><b><%= n.notified_by.nickname %></b>さんがコメントしました</p>
+				            	<% elsif n.notification_type == "参加" %>
+				            		<p><%= n.notified_by.nickname %>さんがイベント参加予定です！</p>
+				            	<% end %>
+				            <% end %>
+				            <% if n.notification_type == "#{n.user.area.name}" %>
+					            <%= link_to link_through_path(n.id) do%>
+					            	<p><%= n.notification_type %>エリアの新しいイベントが投稿されました！</p>
+					            <% end %>
+				            <% end %>
+			            </li>
+			          <% end %>
+		          	<p><%= link_to "過去を見る", user_notifications_path(current_user.id) %></p>
+		          	<% if current_user.notifications.where(check: false).count > 5 %>
+		          		<p><%= link_to "全て見る", events_path %></p>
+		          	<% end %>
+			        </ul>
+			    </li>
+			</ul>
+		<% end %><!-- end unless -->
 
 		<main>
 			<div class="main-wrapper">
@@ -95,7 +100,15 @@
 			</div>
 		</main>
 		<footer id="footer" class="">
-			footer
+			<div class="footer-nav-box">
+				<li class=""></i><%= link_to  "全国のゲレンデ情報をCheck!", "https://snow.gnavi.co.jp/", target: "_blank" %></li>
+				<li class=""><%= link_to "みんなの予定", root_path %></li>
+				<li class=""><%= link_to "予定を投稿", new_event_path %></li>
+				<li class=""><%= link_to "自分のイベントを管理", user_path(current_user.id) %></li>
+				<li class=""><%= link_to "お知らせを見る", user_notifications_path(current_user.id) %></li>
+				<li class="">プライバシーポリシー</li>
+			</div>
+			<p>Copyright ©︎<span class="entrance-font">Snowfans</span> All Right Reserved.</p>
 		</footer>
 	</body>
 </html>
